profilelist1exp/unpackaged/objects/Share_Records__e.object
<CustomObject>
    <description>Event to Create Share Record</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Access_Level__c</fullName>
        <defaultValue>&apos;Read&apos;</defaultValue>
        <label>Account Access Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Access_Level__c</fullName>
        <defaultValue>&apos;Read&apos;</defaultValue>
        <label>Contact Access Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_of_Event__c</fullName>
        <label>Mode of Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_User_Id__c</fullName>
        <label>New User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Share Records</label>
    <pluralLabel>Share Records</pluralLabel>
</CustomObject>